<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/layout"
    android:background="@drawable/gradient_list">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/button8"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custombutton_1"
            android:text="@string/magyar"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <Button
            android:id="@+id/button11"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton_1"
            android:text="@string/szlovak"
            android:textColor="#ffffff"
            app:layout_constraintStart_toStartOf="@id/button8"
            app:layout_constraintTop_toBottomOf="@id/button12" />

        <Button
            android:id="@+id/button12"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custombutton_1"
            android:textColor="#ffffff"
            android:text="@string/angol"
            app:layout_constraintStart_toStartOf="@id/button8"
            app:layout_constraintTop_toBottomOf="@id/button8"
            android:layout_marginTop="10dp"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="197dp"
            android:layout_height="234dp"
            android:src="@drawable/spse2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.127" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/common_google_signin_btn_text_light_focused"
            android:id="@+id/csicskavokhelo"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/logincucc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="250dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="250dp"
                android:background="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">


                <Button
                    android:id="@+id/button194"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"

                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:text="login"
                    android:textColor="#ffffff"
                    android:background="@drawable/custombutton_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/jelszo" />

                <EditText
                    android:id="@+id/jelszo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.506"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.216" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="remember me"
                    app:layout_constraintBottom_toTopOf="@id/button194"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/jelszo"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>