<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_barna_list"
    android:id="@+id/druhePoschodie"
    tools:context=".DruhePoschodie">

    <Button
        android:id="@+id/F205"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:background="@drawable/my_border"
        android:layout_marginRight="166.5dp"
        android:layout_marginLeft="31.5dp"
        android:text="UTOT"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/K1"
        android:layout_width="20dp"
        android:layout_height="38dp"
        android:background="@drawable/kabinet"
        tools:layout_editor_absoluteX="261dp"
        tools:layout_editor_absoluteY="202dp"
        app:layout_constraintStart_toEndOf="@id/F205"
        app:layout_constraintTop_toTopOf="@id/F205"/>

    <Button
        android:id="@+id/F201"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:background="@drawable/my_border"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="279dp"
        app:layout_constraintStart_toEndOf="@id/K1"
        app:layout_constraintTop_toTopOf="@id/K1"
        android:text="LDAN"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/K2"
        android:layout_width="30dp"
        android:layout_height="23dp"
        android:background="@drawable/kabinet"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="510dp"
        app:layout_constraintStart_toEndOf="@id/F201"
        app:layout_constraintTop_toTopOf="@id/F201"/>

    <Button
        android:id="@+id/K3"
        android:layout_width="30dp"
        android:layout_height="15dp"
        android:background="@drawable/kabinet"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="523dp"
        app:layout_constraintStart_toEndOf="@id/F201"
        app:layout_constraintTop_toBottomOf="@id/K2"/>

    <Button
        android:id="@+id/chod15"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:background="#ffd57e"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="292dp"
        app:layout_constraintStart_toStartOf="@id/F205"
        app:layout_constraintTop_toBottomOf="@id/F205"
        />

    <Button
        android:id="@+id/F206"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:background="@drawable/my_border"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="404dp"
        app:layout_constraintStart_toEndOf="@id/chod15"
        app:layout_constraintTop_toBottomOf="@id/K3"
        android:textSize="10sp"
        android:text="OUEN"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/sklad"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:background="@drawable/zakazvstupu"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="365dp"
        app:layout_constraintStart_toStartOf="@id/chod15"
        app:layout_constraintTop_toBottomOf="@id/chod15"/>

    <Button
        android:id="@+id/F204"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:background="@drawable/my_border"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="361dp"
        app:layout_constraintStart_toEndOf="@id/sklad"
        app:layout_constraintTop_toBottomOf="@id/chod15"
        android:text="LCUJ"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/K4"
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:background="@drawable/kabinet"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="378dp"
        app:layout_constraintStart_toEndOf="@id/F204"
        app:layout_constraintTop_toBottomOf="@id/chod15"/>

    <Button
        android:id="@+id/F203"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/my_border"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="498dp"
        app:layout_constraintStart_toEndOf="@id/K4"
        app:layout_constraintTop_toBottomOf="@id/F206"
        android:text="USVA"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/button"
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        app:layout_constraintStart_toStartOf="@id/chod15"
        app:layout_constraintTop_toBottomOf="@id/K1"
        android:background="@drawable/lepcsofok_4"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="6dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="564dp"
        app:layout_constraintEnd_toStartOf="@id/button"
        app:layout_constraintTop_toTopOf="@id/button"
        android:background="@drawable/lepcsofok_3"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="6dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="555dp"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintTop_toTopOf="@id/button2"
        android:background="@drawable/lepcsofok_2"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="6dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="460dp"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintTop_toTopOf="@id/button3"
        android:background="@drawable/lepcsofok_1"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="6dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="441dp"
        app:layout_constraintStart_toEndOf="@id/button"
        app:layout_constraintTop_toTopOf="@id/button"
        android:background="@drawable/lepcsofok_3"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="6dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="568dp"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toTopOf="@id/button5"
        android:background="@drawable/lepcsofok_2"/>

    <Button
        android:id="@+id/button14"
        android:layout_width="6dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="637dp"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toTopOf="@id/button6"
        android:background="@drawable/lepcsofok_1"/>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dPoschodie"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/button164"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="90dp"
        android:background="#FFFF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button165"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/my_border"
        app:layout_constraintTop_toBottomOf="@id/button164"
        app:layout_constraintStart_toStartOf="@id/button164"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="118dp" />

    <Button
        android:id="@+id/button169"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/zakazvstupu"
        app:layout_constraintTop_toBottomOf="@id/button165"
        app:layout_constraintStart_toStartOf="@id/button165"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/button177"
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/button169"
        app:layout_constraintStart_toStartOf="@id/button169"
        android:layout_marginTop="10dp"
        android:background="@drawable/kabinet"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="186dp" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/button164"
        app:layout_constraintStart_toEndOf="@id/button164"
        android:layout_marginStart="10dp"
        android:textSize="10sp"
        android:text="@string/ittKelleneLennem"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="119dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/button165"
        app:layout_constraintStart_toEndOf="@id/button165"
        android:layout_marginLeft="10dp"
        android:textSize="10dp"
        android:text="@string/Osztalyok"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="147dp"
         />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/button169"
        app:layout_constraintStart_toEndOf="@id/button169"
        android:layout_marginLeft="10dp"
        android:textSize="10sp"
        android:textColor="#000000"
        android:text="@string/tiltottHelyek"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="204dp"
        />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/button177"
        app:layout_constraintStart_toEndOf="@id/button177"
        android:layout_marginLeft="10dp"
        android:textSize="10sp"
        android:textColor="#000000"
        android:text="@string/Kabinetek"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="206dp" />

   <!-- <Button
        android:id="@+id/button192"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

 />
 -->


</androidx.constraintlayout.widget.ConstraintLayout>